<resources>
    <string name="app_name">The Meal</string>

    <!--Common-->
    <string name="category">Category</string>
    <string name="category_name">Category Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="meal">Meal</string>
    <string name="meal_category_description">Meal Category Description</string>
    <string name="name">Name</string>
    <string name="source">Source</string>

    <!--Splash Screen-->
    <string name="splash_screen_version">1.0.0</string>
</resources>