<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <androidx.appcompat.widget.Toolbar
        style="@style/WidgetToolbar"
        android:id="@+id/toolbar"
        android:backgroundTint="@color/white">

        <ImageView
            style="@style/ToolbarIconBack"
            android:id="@+id/ibBack"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/ToolbarTitle"
            android:id="@+id/tvToolbarTitle"
            android:text="@string/meal"
            android:textColor="@color/black"
            tools:ignore="HardcodedText" />
    </androidx.appcompat.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_grey" />

    <include
        layout="@layout/layout_loading_page"
        android:id="@+id/llLoaderPage"
        android:visibility="visible" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/background">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_padding_size_medium"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/ivThumb"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCategory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_size_small"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivThumb"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tvCategory"
                    app:layout_constraintTop_toBottomOf="@+id/tvCategory" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_size_medium"
                android:padding="@dimen/margin_padding_size_medium"
                android:orientation="vertical"
                android:background="@color/white">

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvIngredients1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_size_small"
                    android:textSize="@dimen/text_size_small"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvIngredients2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvIngredients3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvIngredients4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvIngredients5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvIngredients6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvIngredients7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvIngredients8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvIngredients9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvIngredients10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvIngredients11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvIngredients12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvIngredients13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvIngredients14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvIngredients15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvIngredients16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvIngredients17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvIngredients18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvIngredients19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvIngredients20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_size_medium"
                android:padding="@dimen/margin_padding_size_medium"
                android:orientation="vertical"
                android:background="@color/white">

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/instructions" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvInstructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_size_small"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>